force-app/main/default/objects/ccrz__E_FeaturedProduct__c/ccrz__E_FeaturedProduct__c.object-meta.xml
<CustomObject>
    <description>Products to display in the Featured Product section of the Home Page</description>
    <label>CC Featured Product</label>
    <nameField>
        <label>Featured Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Featured Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>