force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__DescriptionRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DescriptionRT__c</fullName>
    <label>DescriptionRT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>