force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__FeaturedProductId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FeaturedProductId__c</fullName>
    <externalId>true</externalId>
    <label>Featured Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>