force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Sequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Sequence__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Ordering of the featured products displayed on the site</description>
    <inlineHelpText>Enter a value</inlineHelpText>
    <label>Sequence</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>