force-app/main/default/objects/ccrz__E_FeaturedProduct__c/fields/ccrz__Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Type__c</fullName>
    <description>Featured or Spotlight - Spotlight are more prominent whereas featured is more grid-like display</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Featured</fullName>
            </value>
            <value>
                <fullName>Spotlight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>